feature/10 Changing getTaskComments to addTaskComment
